overflow issue fix

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -37,7 +37,7 @@ body {
 }
 
 .scroll-snap-container {
-  /* height: 100vh; */
+  height: 100vh;
   width: 100vw;
   height: calc(var(--vh, 1vh) * 100);
   overflow-y: scroll;
